--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,14 @@
 
     <build>
         <finalName>Corey</finalName>
+
+        <resources>
+            <resource>
+                <directory>src/main/resource</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
