--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,16 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!--时间处理工具类-->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+
+
+
         <!-- mybatis核心包 -->
         <dependency>
             <groupId>org.mybatis</groupId>
