--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/blog
+url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=gbk
 username=root
 password=123456
 #\u5B9A\u4E49\u521D\u59CB\u8FDE\u63A5\u6570
