--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,11 @@
             <version>1.2.31</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.19</version>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
