--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=gbk
-username=root
-password=123456
+jdbc.url=jdbc:mysql://localhost:3306/blog?rewriteBatchedStatements\=true&useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true&zeroDateTimeBehavior\=convertToNull&allowMultiQueries\=true
+jdbc.username=root
+jdbc.password=123456
 #\u5B9A\u4E49\u521D\u59CB\u8FDE\u63A5\u6570
 initialSize=0
 #\u5B9A\u4E49\u6700\u5927\u8FDE\u63A5\u6570
