--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/blog?rewriteBatchedStatements\=true&useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true&zeroDateTimeBehavior\=convertToNull&allowMultiQueries\=true
+jdbc.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.username=root
 jdbc.password=123456
 #\u5B9A\u4E49\u521D\u59CB\u8FDE\u63A5\u6570
